tests/baselines/reference/emitArrowFunctionWhenUsingArguments09(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments09.ts(1,12): error TS7006: Parameter '_arguments' implicitly has an 'any' type.
emitArrowFunctionWhenUsingArguments09.ts(2,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments09.ts (2 errors) ====
    function f(_arguments) {
               ~~~~~~~~~~
!!! error TS7006: Parameter '_arguments' implicitly has an 'any' type.
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }